--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -1,3 +1,5 @@
+@use "./var";
+
 .container {
     width: 70%;
     margin: auto;
@@ -13,22 +15,23 @@
 
 
 h1 {
-    margin: 30px;
+    margin: 10px;
     font-family: "Lobster", cursive;
     text-shadow: 5px 0 #232931;
-    font-size: 4.5rem;
-    color: #4ecca3;
+    font-size: calc(4.5rem + 1vw);
+    color: var.$f-color;
     text-align: center;
 }
 
 p {
-    font-size: 2rem;
-    color: #4ecca3;
+    font-size: calc(3rem + 1vw);
+    color: var.$f-color;
     font-family: "Indie Flower", cursive;
+    font-weight: bolder;
 }
 
 img {
-    width: 10%;
+    width: 40%;
 }
 
 .bottom {
@@ -36,7 +39,7 @@ img {
 }
 
 .butn {
-    background: #4ecca3;
+    background: var.$f-color;
     font-family: "Indie Flower", cursive;
     border-radius: 7px;
     color: #ffff;
