--- a/css/style.css
+++ b/css/style.css
@@ -11,22 +11,23 @@
 }
 
 h1 {
-  margin: 30px;
+  margin: 10px;
   font-family: "Lobster", cursive;
   text-shadow: 5px 0 #232931;
-  font-size: 4.5rem;
-  color: #4ecca3;
+  font-size: calc(4.5rem + 1vw);
+  color: rgb(202, 81, 81);
   text-align: center;
 }
 
 p {
-  font-size: 2rem;
-  color: #4ecca3;
+  font-size: calc(3rem + 1vw);
+  color: rgb(202, 81, 81);
   font-family: "Indie Flower", cursive;
+  font-weight: bolder;
 }
 
 img {
-  width: 10%;
+  width: 40%;
 }
 
 .bottom {
@@ -34,7 +35,7 @@ img {
 }
 
 .butn {
-  background: #4ecca3;
+  background: rgb(202, 81, 81);
   font-family: "Indie Flower", cursive;
   border-radius: 7px;
   color: white;
