--- a/css/style.css
+++ b/css/style.css
@@ -4,9 +4,15 @@
   text-align: center;
 }
 
+.zweiW4 {
+  display: flex;
+  flex-direction: column;
+}
+
 .dice {
-  text-align: center;
-  display: inline-block;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   margin: 10px;
 }
 
